# fds-aws-coding-exercise

./: .gitignore  Makefile  pyproject.toml
app/python/: requirements.txt
app/python/src/: config.py  main.py  routes.py
app/python/src/db/: dynamo.py  tables.py
app/python/src/models/: models.py
app/python/src/schemas/: schemas.py
app/python/src/tests/: main.py
app/python/src/utils/: response.py  utils.py
e2e/: Fender.postman_collection.json  plansSample.json
scripts/: deploy-python.sh
