[project]
name = "fds-aws-coding-exercise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker>=37.12.0",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "boto3>=1.40.67",
    "ipython>=9.7.0",
    "pytest>=8.4.2",
]
